# PairG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: pairg-config.cmake.in
cmake/modules/: FindHTSlib.cmake
ext/: external.cmake
ext/PaSGAL/: csr.hpp  csr_char.hpp  graphLoad.hpp  graph_iter.hpp  utils.hpp
include/pairg/: heuristics.hpp  reachability.hpp  spgemm_utility.hpp  utility.hpp
scripts/: dot2txt.py
src/: CMakeLists.txt  main.cpp  spgemm.cpp
src/include/: graphLoad.hpp  heuristics.hpp  parseCmdArgs.hpp  reachability.hpp  spgemm_utility.hpp  utility.hpp
test/: BRCA1_seq_graph.txt
tests/: CMakeLists.txt  test_bfs.cpp  test_graphLoad.cpp  test_main.cpp  test_pairing.cpp
tests/data/: chain.txt  chain.vg
